# Trabajo-Inteligencia-Artificial

./: .Rhistory  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  utils.py
data/: calendar.csv  calendar_limpio.csv  dataset_final.csv  dataset_ia_final.csv  dict_barrios.pkl  knn_model.pkl  listings.csv  listings_con_renta_final.csv  listings_limpio.csv  mapa_interactivo_filtros.html  mapa_interactivo_renta.html  mapa_sevilla.geojson  renta_provincia_sevilla.csv  renta_sevilla_capital_limpio.csv  reviews.csv  reviews_scores_nlp.csv  scaler.pkl
notebooks/: .Rhistory  00_etl_espacial.ipynb  01_limpieza_y_preparacion.ipynb  02_analisis_y_mapas.ipynb  02_graficas.R  02_mapas.R  03_analisis_eventos.ipynb  04_NLP.ipynb  04_NLP.py  05_KNN.ipynb  app.py  mapas_graficas.R
