[project]
name = "trabajo-inteligencia-artificial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11*"
dependencies = [
    "streamlit>=1.57.0",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "joblib>=1.5.3",
    "tqdm>=4.67.3",
    "tensorflow>=2.15.0",
    "tf-keras",
    "transformers",
    "torch",
    "geopandas",
    "dask[complete]>=2026.3.0",
    "folium",
    "scipy",
    "pillow",
]
